--- a/Semana01/Dia02-html/index.html
+++ b/Semana01/Dia02-html/index.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section class="photo"></section>
+
+        <section class="content">
+            <h3>Perfume</h3>
+
+            <h1>Gabrielle Essence Eau De Parfum</h1>
     
+            <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
+            </p>
+            <div>
+                <span>$149.99</span>
+                <s>$169.99</s>
+            </div>
+            <button>
+                <img src="images/icon-cart.svg" alt="Cart icon">
+                Add to Cart
+            </button>
+        </section> 
+    </main>    
 </body>
 </html>
